add redis configuration